# parceli2

./: Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  main.rs  parceli.rs
src/models/: api.rs  local.rs  mod.rs
