[package]
name = "parceli2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3

[dependencies]
chrono = { version = "~0.4", default-features = false, features = [
	"std",
	"time",
	"winapi",
] }
clap = { version = "~4.1", features = ["derive", "env"] }
console = "~0.15"
directories = "~4.0"
futures = "0.3.27"
lazy_static = "~1.4"
reqwest = { version = "~0.11", default-features = false, features = [
	"rustls",
	"json",
	"rustls-tls",
	"deflate",
	"gzip",
] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
textwrap = "0.16.0"
thiserror = "~1.0"
tokio = { version = "~1.26", features = ["macros", "rt-multi-thread"] }
toml = "~0.7"
